--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -1,5 +1,6 @@
 {% extends 'layout.html' %}
 {% load static %}
+{% load i18n %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
