--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -486,6 +486,7 @@ nav {
             padding: 0.5rem 1.5rem;
             border-radius: 9999px; /* full rounded */
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            font-size: 0.5rem;
         }
 
         .no-scroll {
