--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="navigation-div1">
                 <div class="website-titles">
-                    <a href="{% url 'index' %}" style="text-decoration: none;"><h1 class="website-title1">BASROBA</h1>
+                    <img src="{% static 'pics/MainLogo.png' %}" alt="" style="width: max; height: 60px; margin-right: 10px;">
                     <h1 class="website-title2">{% trans "BE WHO YOU ARE" %}</h1></a>
                 </div>
 
