--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="navigation-div1">
                 <div class="website-titles">
-                    <img src="{% static 'pics/MainLogo.png' %}" alt="" style="width: max; height: 80px; margin-right: 10px;">
+                    <a href="{% url 'index' %}"><img src="{% static 'pics/MainLogo.png' %}" alt="" style="width: max; height: 80px; margin-right: 10px;"></a>
                 </div>
 
                 <div id="menu-together">
