--- a/app/templates/choose_language.html
+++ b/app/templates/choose_language.html
@@ -22,7 +22,7 @@
         .language-page {
             height: 100vh;
             width: 100%;
-            background-image: url("{% static 'images/bg.jpg' %}");
+            background-image: url("{% static 'pics/Picture1.png' %}");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
