--- a/staticfiles/css/layout.css
+++ b/staticfiles/css/layout.css
@@ -242,6 +242,10 @@ nav {
 }
 
 @media screen and (max-width: 720px) {
+    .nav {
+        color: white;
+    }
+
     .burger-menu {
         display: block;
     }
